# inventory-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.ai/rules/: repo-overview.mdc
.ai/skills/auth-system/: SKILL.md
.ai/skills/commits/: SKILL.md
.ai/skills/running-the-app/: SKILL.md
apps/authentication/: adapters.py  authentication.py  serializers.py  urls.py  utils.py  views.py
apps/authentication/tests/: test_auth.py  test_social.py
apps/common/: exceptions.py  models.py  pagination.py  views.py
apps/common/tests/: test_common.py
apps/inventory/: admin.py  exceptions.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/inventory/migrations/: 0001_initial.py  0002_item.py  0003_inventoryunit.py  0004_partemplate_partemplateitem.py  0005_inventoryunit_par_template.py
apps/inventory/tests/: factories.py  test_catalog_api.py  test_entitlements.py  test_items_api.py  test_models.py  test_par_lines_api.py  test_par_templates.py  test_par_templates_api.py  test_protected_delete.py  test_signals.py  test_unit_par_assignment.py  test_units.py  test_units_api.py
apps/organizations/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/organizations/migrations/: 0001_initial.py  0002_seed_plans.py  0003_alter_invite_options_alter_membership_options.py  0004_add_max_subdivisions.py  0005_seed_free_max_subdivisions.py
apps/organizations/tests/: factories.py  test_entitlements.py  test_invites_api.py  test_members_api.py  test_models.py  test_organizations_api.py  test_signals.py  test_transfer_api.py  test_transfer_ownership.py
apps/users/: adapters.py  admin.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_lowercase_emails.py
apps/users/tests/: factories.py  test_email_normalization.py  test_users.py
compose/django/: Dockerfile
compose/nginx/: Dockerfile  nginx.conf  nginx.staging.conf
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  e2e.py  production.py  staging.py  test.py
envs/: .env.dev.example  .env.e2e.example  .env.prod.example  .env.staging.example  .env.test.example
scripts/: entrypoint.sh  manage.sh  shell.sh  start.sh  stop.sh  test.sh
(+9 files in other folders)
